# kobayashi-compiler

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md
doc/: no_parallelization.md  parallelization.md
runtime/: README.md  sylib.c  sylib.h
runtime/armv7/: thread.S
runtime/rv32/: thread.S
src/backend/: archinfo.hpp  backend_passes.cpp  backend_passes.hpp  coloring_alloc.cpp  inst.cpp  inst.hpp  merge_inst.cpp  merge_inst.hpp  program.cpp  program.hpp  simple_coloring_alloc.cpp
src/backend/armv7/: backend_passes.cpp  backend_passes.hpp  coloring_alloc.cpp  coloring_alloc.hpp  inst.cpp  inst.hpp  merge_inst.cpp  merge_inst.hpp  program.cpp  program.hpp  simple_coloring_alloc.cpp  simple_coloring_alloc.hpp
src/backend/rv32/: archinfo.hpp  backend_passes.cpp  backend_passes.hpp  coloring_alloc.cpp  coloring_alloc.hpp  def.hpp  inst.hpp  program.cpp  program.hpp  test.cpp  (+2 more)
src/common/: common.cpp  common.hpp  errors.hpp
src/frontend/: CommonLex.g4  SysY.g4  SysY.interp  SysYBaseVisitor.cpp  SysYBaseVisitor.h  SysYLexer.cpp  SysYLexer.h  SysYLexer.interp  SysYLexer.tokens  SysYParser.cpp  SysYParser.h  SysYVisitor.cpp  SysYVisitor.h  ast_visitor.cpp  ast_visitor.hpp  exp_value.cpp  exp_value.hpp  init_value.cpp  init_value.hpp  main.cpp  symbol_table.cpp  symbol_table.hpp
src/optimizer/: array_ssa.cpp  dce.cpp  debug.hpp  dom_tree.cpp  exec.cpp  func_inline.cpp  gvn.cpp  ind_var.cpp  instr_schedule.cpp  ir.cpp  ir.hpp  loop.cpp  mem2reg.cpp  pass.cpp  pass.hpp  ssa.cpp  value_range.cpp
testing/: batch.sh  test.py  test_armv7.py  test_riscv32.py
