project(thu-cs-compiler CXX)
cmake_minimum_required(VERSION 2.6)
#aux_source_directory(. DIR_SRC)
file(GLOB_RECURSE DIR_SRC "src/*.cpp")
file(GLOB_RECURSE DIR_LIB_SRC "third_party/*.cpp")
add_compile_options(-g -std=c++17 -O2)
include_directories(src/common)
include_directories(src/frontend)
include_directories(src/optimizer)
include_directories(src/backend)
include_directories(third_party/antlr4-runtime)
add_executable(main ${DIR_SRC} ${DIR_LIB_SRC})
